--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "eslint": "eslint './**/*.{js,jsx}'",
     "build": "webpack --mode production",
-    "test:e2e":"cypress run "
+    "test:e2e": "cypress run "
   },
   "repository": {
     "type": "git",
@@ -36,8 +36,9 @@
     "css-loader": "^3.5.3",
     "cypress": "^9.4.1",
     "eslint": "^6.8.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^23.11.0",
-    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react": "^7.28.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^25.5.4",
