--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,5 +33,5 @@ jobs:
           heroku_app_name: "pokedex2022"
           heroku_email: "eddypv0@gmail.com"
           healthcheck: "https://pokedex2022.herokuapp.com/health"
-          checkstring: "ook"
+          checkstring: "ok"
           rollbackonhealthcheckfailed: true
